--- a/rss/style.css
+++ b/rss/style.css
@@ -120,8 +120,8 @@ footer h5{
 
 footer a{
     text-decoration: none;
-    border-bottom: 1px solid #fff;
-    color: #fff;
+    border-bottom: 1px solid #7879b9;
+    color: ##424242;
 }
 
 footer h5, footer a{
@@ -149,4 +149,6 @@ footer h5, footer a{
     img{
         filter: grayscale(25%);
     }
+    footer a{
+        color: #fff;
 }
