--- a/rss/style.css
+++ b/rss/style.css
@@ -121,7 +121,7 @@ footer h5{
 footer a{
     text-decoration: none;
     border-bottom: 1px solid #7879b9;
-    color: ##424242;
+    color: #424242;
 }
 
 footer h5, footer a{
